Localize page to Russian and add Pudil image

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bonya — our good girl</title>
-    <meta name="description" content="A small page dedicated to Bonya — photos, personality, and pedigree." />
+    <title>Боня — наша хорошая девочка</title>
+    <meta name="description" content="Страница про Боню: фото, характер и «родословная»." />
     <style>
       :root {
         color-scheme: light;
@@ -297,41 +297,39 @@
         <div class="brand">
           <div class="badge">B</div>
           <div>
-            <div style="color: rgba(255, 255, 255, 0.72); font-size: 12px; font-weight: 700">
-              Bonya fan page
-            </div>
+            <div style="color: rgba(255, 255, 255, 0.72); font-size: 12px; font-weight: 700">Страница про Боню</div>
             <div style="font-size: 14px; font-weight: 800">Bonya</div>
           </div>
         </div>
         <nav aria-label="Page sections">
-          <a class="pill" href="#photos">Photos</a>
-          <a class="pill" href="#about">About</a>
-          <a class="pill" href="#pedigree">Pedigree</a>
+          <a class="pill" href="#photos">Фото</a>
+          <a class="pill" href="#about">О Боне</a>
+          <a class="pill" href="#pedigree">Родословная</a>
         </nav>
       </header>
 
       <div class="hero">
         <div class="heroGrid">
           <div>
-            <div class="kicker">A page dedicated to our dog</div>
-            <h1>Meet <span class="accent">Bonya</span>.</h1>
+            <div class="kicker">Страница, посвящённая нашей собаке</div>
+            <h1>Знакомьтесь: <span class="accent">Боня</span>.</h1>
             <p class="lede">
-              Equal parts cuddle expert, watchful guardian, and professional snack negotiator. This is her little
-              corner of the internet: photos, personality highlights, and a (very) proud pedigree section.
+              В равных долях эксперт по обнимашкам, бдительный охранник и профессиональный переговорщик по вкусняшкам.
+              Это её маленький уголок интернета: фото, характер и очень (очень) гордая «родословная».
             </p>
 
             <div class="stats" aria-label="Bonya highlights">
               <div class="stat">
-                <b>Superpower</b>
-                <span>Making strangers say “awww” in 0.2 seconds</span>
+                <b>Суперсила</b>
+                <span>Заставляет незнакомцев говорить «оуу» за 0.2 секунды</span>
               </div>
               <div class="stat">
-                <b>Favorite hobby</b>
-                <span>Quality control on every walk route</span>
+                <b>Любимое занятие</b>
+                <span>Контроль качества каждого маршрута на прогулке</span>
               </div>
               <div class="stat">
-                <b>Signature move</b>
-                <span>The “I’m innocent” look (always works)</span>
+                <b>Фирменный приём</b>
+                <span>Взгляд «я ни при чём» (работает всегда)</span>
               </div>
             </div>
           </div>
@@ -339,14 +337,14 @@
           <aside class="heroCard" aria-label="Featured photo">
             <img
               class="heroPhoto bonya-photo"
-              src="assets/bonya/bonya-01.jpg"
-              alt="Bonya looking like the best girl"
+              src="assets/bonya/pudil-spotted.svg"
+              alt="Пудиль — пятнистый пудель (главное фото)"
               loading="eager"
               decoding="async"
             />
             <div class="note">
-              Tip: put your photos into <code>assets/bonya/</code> as <code>bonya-01.jpg</code>, <code>bonya-02.jpg</code>,
-              ...
+              Подсказка: добавьте фото Бони в <code>assets/bonya/</code> с именами <code>bonya-02.jpg</code>,
+              <code>bonya-03.jpg</code> и т.д.
             </div>
           </aside>
         </div>
@@ -355,58 +353,58 @@
       <main>
         <section id="photos" aria-label="Photo gallery">
           <div class="galleryHeader">
-            <h2>Photos</h2>
+            <h2>Фото</h2>
             <p>
-              Add Bonya’s real photos into <code>assets/bonya/</code>. If a file is missing, you’ll see a neat placeholder
-              instead of a broken image.
+              Добавьте реальные фото Бони в <code>assets/bonya/</code>. Если какого-то файла нет — вместо «битой» картинки
+              появится аккуратный плейсхолдер.
             </p>
           </div>
           <div class="gallery">
             <div class="tile wide">
-              <img class="bonya-photo" src="assets/bonya/bonya-02.jpg" alt="Bonya on an adventure" loading="lazy" />
+              <img class="bonya-photo" src="assets/bonya/bonya-02.jpg" alt="Боня на прогулке" loading="lazy" />
             </div>
             <div class="tile">
-              <img class="bonya-photo" src="assets/bonya/bonya-03.jpg" alt="Bonya being curious" loading="lazy" />
+              <img class="bonya-photo" src="assets/bonya/bonya-03.jpg" alt="Боня изучает мир" loading="lazy" />
             </div>
             <div class="tile">
-              <img class="bonya-photo" src="assets/bonya/bonya-04.jpg" alt="Bonya taking a break" loading="lazy" />
+              <img class="bonya-photo" src="assets/bonya/bonya-04.jpg" alt="Боня отдыхает" loading="lazy" />
             </div>
             <div class="tile">
-              <img class="bonya-photo" src="assets/bonya/bonya-05.jpg" alt="Bonya with her favorite toy" loading="lazy" />
+              <img class="bonya-photo" src="assets/bonya/bonya-05.jpg" alt="Боня со своей любимой игрушкой" loading="lazy" />
             </div>
           </div>
         </section>
 
         <div class="grid2">
           <section id="about" aria-label="About Bonya">
-            <h2>About Bonya</h2>
+            <h2>О Боне</h2>
             <p>
-              Bonya is the kind of dog who knows exactly when you need a little extra joy. She’s brave, gentle, and
-              suspiciously smart when treats are involved.
+              Боня — из тех собак, которые точно знают, когда вам нужно чуть больше радости. Она смелая, ласковая и
+              подозрительно умная, когда дело касается вкусняшек.
             </p>
             <ul>
-              <li><b>Personality:</b> affectionate, alert, playful, extremely persuasive</li>
-              <li><b>Likes:</b> long walks, cozy blankets, compliments, and being included</li>
-              <li><b>Dislikes:</b> vacuum cleaners and “we’re out of snacks”</li>
+              <li><b>Характер:</b> ласковая, внимательная, игривая, невероятно убедительная</li>
+              <li><b>Любит:</b> долгие прогулки, уютные пледы, комплименты и «быть в центре событий»</li>
+              <li><b>Не любит:</b> пылесос и фразу «вкусняшки закончились»</li>
             </ul>
           </section>
 
           <section id="pedigree" aria-label="Pedigree">
-            <h2>Pedigree (Uh, all right!)</h2>
+            <h2>Родословная (ну ладно!)</h2>
             <p>
-              Official paperwork may be boring — so here’s our very serious, very scientific pedigree summary for Bonya.
+              Официальные бумаги — это скучно. Поэтому вот наша очень серьёзная и крайне научная «родословная» Бони.
             </p>
             <ul>
-              <li><b>Lineage:</b> 50% good girl, 50% best girl</li>
-              <li><b>Noble house:</b> House of Warm Lap &amp; Treats</li>
-              <li><b>Distinctions:</b> Grand Champion of Tail Wags, Master of Side-Eye</li>
-              <li><b>Motto:</b> “If I fits, I sits.”</li>
+              <li><b>Происхождение:</b> 50% хорошая девочка, 50% лучшая девочка</li>
+              <li><b>Благородный дом:</b> Дом Тёплых Коленей и Вкусняшек</li>
+              <li><b>Титулы:</b> Гранд-чемпион виляния хвостом, мастер выразительного взгляда</li>
+              <li><b>Девиз:</b> «Если влезла — значит, моё место.»</li>
             </ul>
           </section>
         </div>
 
         <footer>
-          Made with love for Bonya. Replace the images in <code>assets/bonya/</code> to make it truly hers.
+          Сделано с любовью для Бони. Замените изображения в <code>assets/bonya/</code>, чтобы страница стала по-настоящему её.
         </footer>
       </main>
     </div>
@@ -429,7 +427,7 @@
             safe +
             "</text>" +
             '<text x="600" y="510" text-anchor="middle" font-family="ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial" font-size="26" fill="rgba(255,255,255,0.65)">' +
-            "Drop photos into assets/bonya/" +
+            "Добавьте фото в assets/bonya/" +
             "</text>" +
             "</svg>";
           return "data:image/svg+xml;utf8," + encodeURIComponent(svg);
