Обновлен текст о стоимости: добавлена ссылка на мобильное приложение Bitafit

--- a/index.html
+++ b/index.html
@@ -988,8 +988,8 @@
             <div style="font-size: 48px; font-weight: 900; line-height: 1;">1 000 <span style="font-size: 24px;">₽</span></div>
           </div>
           <p style="font-size: 16px; color: var(--text-light); margin-top: 30px;">
-            Точную стоимость занятий вы можете узнать, выбрав клуб и тренера в 
-            <a href="https://brightfit.ru/raspisanie/" style="color: var(--primary); text-decoration: none; font-weight: 600;">расписании минигрупп</a>.
+            Точную стоимость занятий можно узнать в мобильном приложении 
+            <a href="https://brightfit.ru/#footer" style="color: var(--primary); text-decoration: none; font-weight: 600;">Bitafit</a>.
           </p>
         </div>
       </div>
