Обновлена ссылка 'Найти ближайший клуб' на карту клубов

--- a/index.html
+++ b/index.html
@@ -1077,7 +1077,7 @@
             <h3>Контакты</h3>
             <p>Телефон: <a href="tel:+78001234567">8-800-123-45-67</a></p>
             <p>Email: <a href="mailto:info@brightfit.ru">info@brightfit.ru</a></p>
-            <p>Адреса клубов: <a href="#">Найти ближайший клуб</a></p>
+            <p>Адреса клубов: <a href="https://brightfit.ru/karta-klubov/">Найти ближайший клуб</a></p>
           </div>
           
           <div class="footer-section">
