Обновлен текст о доступной цене: добавлена информация о программе с учетом целей и ограничений

--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
             <h3>Доступная цена</h3>
             <p>
               Тренировки в минигруппе значительно дешевле персональных занятий, 
-              при этом вы получаете внимание профессионального тренера и эффективную программу.
+              при этом вы получаете внимание профессионального тренера и эффективную тренировочную программу с учетом ваших целей и ограничений.
             </p>
           </div>
           
