--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
         border: none;
         cursor: pointer;
         font-size: 16px;
+        text-align: center;
       }
 
       .btn-primary {
@@ -170,15 +171,15 @@
       }
 
       .btn-secondary {
-        background: var(--primary);
-        color: var(--white);
-        box-shadow: 0 4px 15px rgba(0, 184, 169, 0.3);
+        background: var(--white);
+        color: #9B9BC8;
+        box-shadow: 0 4px 15px rgba(155, 155, 200, 0.2);
       }
 
       .btn-secondary:hover {
-        background: var(--primary-dark);
+        background: #f8f9fa;
         transform: translateY(-2px);
-        box-shadow: 0 6px 20px rgba(0, 184, 169, 0.4);
+        box-shadow: 0 6px 20px rgba(155, 155, 200, 0.3);
       }
 
       /* Hero Section */
@@ -813,7 +814,7 @@
             <a href="https://brightfit.ru/skachat-prilozhenie-bitafit/" class="btn btn-secondary">Запись через мобильное приложение</a>
           </div>
           <div class="hero-image">
-            <img src="assets/main.png" alt="Тренировка в мини-группе" class="hero-photo" />
+            <img src="assets/05.webp" alt="Тренировка в мини-группе" class="hero-photo" />
           </div>
         </div>
       </div>
@@ -875,6 +876,35 @@
           </div>
         </section>
 
+    <section class="pricing" id="pricing">
+      <div class="container">
+        <h2 class="section-title">Цены на мини-группы</h2>
+        <div style="max-width: 920px; margin: 0 auto; text-align: center; padding: 40px 20px;">
+          <p style="font-size: 20px; color: var(--text-light); line-height: 1.8; margin-bottom: 26px;">
+            Мини-группа выгоднее персональной тренировки.
+          </p>
+
+          <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 18px; align-items: stretch; margin-top: 10px;">
+            <div style="background: linear-gradient(135deg, #9B9BC8 0%, #8B8BB8 100%); color: white; padding: 28px; border-radius: var(--radius); box-shadow: var(--shadow);">
+              <div style="font-size: 14px; opacity: 0.95; margin-bottom: 6px;">Мини-группа</div>
+              <div style="font-size: 44px; font-weight: 900; line-height: 1;">от 1 000 <span style="font-size: 22px;">₽</span></div>
+            </div>
+
+            <div style="background: var(--white); border: 1px solid rgba(0, 0, 0, 0.06); padding: 28px; border-radius: var(--radius); box-shadow: var(--shadow);">
+              <div style="font-size: 14px; color: var(--text-light); margin-bottom: 6px;">Персональная тренировка</div>
+              <div style="font-size: 44px; font-weight: 900; line-height: 1; color: var(--dark);">от 1 750 <span style="font-size: 22px; color: var(--text-light);">₽</span></div>
+            </div>
+          </div>
+
+          <p style="font-size: 16px; color: var(--text-light); margin-top: 26px;">
+            Точная стоимость занятий зависит от <strong style="color: var(--text);">города</strong> и <strong style="color: var(--text);">квалификации тренера</strong>.
+            Узнать актуальные цены можно в мобильном приложении
+            <a href="https://brightfit.ru/skachat-prilozhenie-bitafit/" style="color: #9B9BC8; text-decoration: none; font-weight: 600;">Bitafit</a>.
+          </p>
+        </div>
+      </div>
+    </section>
+
     <section class="how-it-works" id="how-it-works">
       <div class="container">
         <h2 class="section-title">Как это работает</h2>
@@ -911,35 +941,6 @@
         </div>
       </div>
           </section>
-
-    <section class="pricing" id="pricing">
-      <div class="container">
-        <h2 class="section-title">Цены на мини-группы</h2>
-        <div style="max-width: 920px; margin: 0 auto; text-align: center; padding: 40px 20px;">
-          <p style="font-size: 20px; color: var(--text-light); line-height: 1.8; margin-bottom: 26px;">
-            Мини-группа выгоднее персональной тренировки.
-          </p>
-
-          <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 18px; align-items: stretch; margin-top: 10px;">
-            <div style="background: linear-gradient(135deg, var(--primary) 0%, var(--primary-dark) 100%); color: white; padding: 28px; border-radius: var(--radius); box-shadow: var(--shadow);">
-              <div style="font-size: 14px; opacity: 0.95; margin-bottom: 6px;">Мини-группа</div>
-              <div style="font-size: 44px; font-weight: 900; line-height: 1;">от 1 000 <span style="font-size: 22px;">₽</span></div>
-            </div>
-
-            <div style="background: var(--white); border: 1px solid rgba(0, 0, 0, 0.06); padding: 28px; border-radius: var(--radius); box-shadow: var(--shadow);">
-              <div style="font-size: 14px; color: var(--text-light); margin-bottom: 6px;">Персональная тренировка</div>
-              <div style="font-size: 44px; font-weight: 900; line-height: 1; color: var(--dark);">от 1 750 <span style="font-size: 22px; color: var(--text-light);">₽</span></div>
-            </div>
-          </div>
-
-          <p style="font-size: 16px; color: var(--text-light); margin-top: 26px;">
-            Точная стоимость занятий зависит от <strong style="color: var(--text);">города</strong> и <strong style="color: var(--text);">квалификации тренера</strong>.
-            Узнать актуальные цены можно в мобильном приложении
-            <a href="https://brightfit.ru/skachat-prilozhenie-bitafit/" style="color: var(--primary); text-decoration: none; font-weight: 600;">Bitafit</a>.
-          </p>
-        </div>
-      </div>
-    </section>
 
     <section class="how-it-works" id="mini-groups-only">
       <div class="container">
