Update step numbers and pricing card colors to RGB(172, 151, 248)

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
       .step-number {
         width: 60px;
         height: 60px;
-        background: var(--primary);
+        background: #AC97F8;
         color: var(--white);
         border-radius: 50%;
         display: flex;
@@ -885,7 +885,7 @@
           </p>
 
           <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 18px; align-items: stretch; margin-top: 10px;">
-            <div style="background: linear-gradient(135deg, #9B9BC8 0%, #8B8BB8 100%); color: white; padding: 28px; border-radius: var(--radius); box-shadow: var(--shadow);">
+            <div style="background: linear-gradient(135deg, #AC97F8 0%, #9C87E8 100%); color: white; padding: 28px; border-radius: var(--radius); box-shadow: var(--shadow);">
               <div style="font-size: 14px; opacity: 0.95; margin-bottom: 6px;">Мини-группа</div>
               <div style="font-size: 44px; font-weight: 900; line-height: 1;">от 1 000 <span style="font-size: 22px;">₽</span></div>
             </div>
